created info utili section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <main>
         <!-- Sezione le mie spese -->
         <section>
+            <h2>Le mie spese</h2>
             <table>
                 <!-- Intestazione della table -->
                 <thead>
@@ -54,7 +55,47 @@
                     </tr>
                 </tbody>
             </table>
+            <hr>
         </section>
+
+        <!-- Sezione Cose da fare -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+        </section>
+
+        <!-- Sezione info utili-->
+        <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri utili di emergenza
+                    <un>
+                        <li>999 - Emergenza</li>
+                        <li>101 - Numero Polizia</li>
+                        <li>111 - Numero assistenza medica</li>
+                    </un>
+                </li>
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong> Westminister, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+        </section>
+
     </main>
     
     <footer>
