add le mie foto section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <li>Ascoltare un artista di strada &check;</li>
                 <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
             </ul>
+            <hr>
         </section>
 
         <!-- Sezione info utili-->
@@ -98,8 +99,11 @@
 
     </main>
     
+    <!-- sezioen footer -->
     <footer>
-
+        <h3>Le foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="miillennium-bridge">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="tower-bridge">
     </footer>
     
 </body>
