--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul>
                 <li>Visitare la Tower of London &cross;</li>
                 <li>Visitare greenwich &check;</li>
-                <li>Ascoltare un artista di strada &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
                 <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
             </ul>
             <hr>
@@ -73,11 +73,11 @@
             <h3>Info utili:</h3>
             <ol>
                 <li>Numeri utili di emergenza
-                    <un>
-                        <li>999 - Emergenza</li>
-                        <li>101 - Numero Polizia</li>
-                        <li>111 - Numero assistenza medica</li>
-                    </un>
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero Polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
                 </li>
                 <li>Hotel
                     <ul>
