--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
         <!-- Titolo con immagini -->
-    <head>
+    <header>
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="london-eye-0"><img src="img/pexels-bill-emrich-230794-1.jpg" alt="london-eye-1"><img src="img/pexels-bill-emrich-230794-2.jpg" alt="london-eye-2">
         <hr>
-    </head>
+    </header>
         
     <main>
         <!-- Sezione le mie spese -->
